--- a/index.html
+++ b/index.html
@@ -18,7 +18,28 @@
 
 <body class="d-flex flex-column min-vh-100"> <!-- Making the body take full height -->
     <!-- Navbar -->
-    <div>Navigation</div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="software.html">Precision software</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="register.html">Register</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!--Header-->
     <header class="container">
@@ -30,7 +51,7 @@
 
     <!--Main Element holding important sections-->
     <main>
-    <!--Section-->
+        <!--Section-->
         <section class="container">
             <div class="row">
                 <div class="col-12">Precision matters</div>
