--- a/index.html
+++ b/index.html
@@ -18,20 +18,22 @@
 
 <body class="d-flex flex-column min-vh-100"> <!-- Making the body take full height -->
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Navbar</a>
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+        <div class="container"> <!-- Changed to container for better alignment -->
+            <a class="navbar-brand" href="index.html">
+                <i class="fa-solid fa-person-digging"></i>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto"> <!-- ms auto pushes nav to right -->
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="software.html">Precision software</a>
+                        <a class="nav-link" href="software.html">Precision Software</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="register.html">Register</a>
