--- a/software.html
+++ b/software.html
@@ -16,15 +16,17 @@
 
 <body class="d-flex flex-column min-vh-100">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Navbar</a>
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <i class="fa-solid fa-person-digging"></i>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
@@ -56,6 +58,8 @@
                 <div class="col-12 col md-6 col-xl-4">Finance Tracker</div>
                 <div class="col-12 col md-6 col-xl-4">Material Tracker</div>
                 <div class="col-12 col md-6 col-xl-4">Planning & Control Documentation</div>
+                <div class="col-12 col md-6 col-xl-4">Hire Tracker</div>
+                <div class="col-12 col md-6 col-xl-4">Employee tickets database</div>
                 <div class="col-12 col md-6 col-xl-4">All in One</div>
             </div>
         </section>
