Home page completed, ccs not applied. footer added to register and software page

--- a/software.html
+++ b/software.html
@@ -65,16 +65,31 @@
         </section>
     </main>
     <!--Footer-->
-    <footer class="mt-auto">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">Footer header section</div>
+    <footer class="mt-auto"> <!-- mt auto pushes footer to bottom -->
+        <div class="container section">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                    <h3 class="display-6">Reach out to our precise team!</h3>
+                </div>
                 <!--Company Logo-->
-                <div class="col-12 col-xl-4">PMC</div>
+                <div class="col-12 col-xl-4 text-center"><img src="" alt="Company Logo"></div>
                 <!--Contact Info-->
-                <div class="col-12 col-xl-4">Contact</div>
+                <div class="col-12 col-xl-4 text-center">
+                    <address>
+                        Projects Managed with Code<br>
+                        123 Construction Lane<br>
+                        Buildtown, BT1 2CD<br>
+                        Phone: (123) 456-7890<br>
+                        Email: info@pmc.org
+                    </address>
+                </div>
                 <!--Social Media Links-->
-                <div class="col-12 col-xl-4">hi</div>
+                <div class="col-12 col-xl-4 text-center social-links">
+                    <a href="https://www.facebook.com" class="me-3"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                    <a href="https://www.x.com" class="me-3"><i class="fa-brands fa-twitter fa-2x"></i></a>
+                    <a href="https://www.linkedin.com" class="me-3"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+                    <a href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                </div>
             </div>
         </div>
     </footer>
