--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 
     <!--Header-->
     <header class="container">
-        <div class="row">
-            <div class="col-12">Precsion Management for Construction</div>
-            <div class="col-12">Construction Picture</div>
+        <div class="row justify-content-center text-center">
+            <div class="col-12">
+                <h1>Precision Management for Construction</h1>
+            </div>
+            <div class="col-12"><img src="assets/images/low-angle-view-skyscrapers.jpg" class="img-fluid w-100"></div>
         </div>
     </header>
 
@@ -55,24 +57,58 @@
     <main>
         <!--Section-->
         <section class="container">
-            <div class="row">
-                <div class="col-12">Precision matters</div>
-                <div class="col-12 col-xl-6">hi</div>
-                <div class="col-12 col-xl-6">hi</div>
+            <div class="row justify-content-center text-center">
+                <div class="col-12">
+                    <h2 class="display-6">Precision matters</h2>
+                </div>
+                <div class="col-12 col-xl-12">
+                    <p>PMC is a mobile-first SaaS platform built for construction subcontractors to simplify project
+                        management. It bringd together real-time site progress tracking, detailed materail and tool
+                        management, and health and safety compliance in one easy-to-use system. Designed for small to
+                        medium firms. PMC helps reduce wastem improves accountability, and keeps projects on time, on
+                        budget, and compliant without the complexity or cost of tradition project management software.
+                    </p>
+                </div>
+                <div class="col-12 col-xl-12">
+                    <p></p>With PMC, you dont just manage projects, you manage them with code!
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center mt-4 mb-4">
+                    <a class="btn btn-primary" href="software.html" role="button">Precsion Software</a>
+                    <a class="btn btn-primary" href="register.html" role="button">Register</a>
+                </div>
             </div>
         </section>
     </main>
     <!--Footer-->
     <footer class="mt-auto"> <!-- mt auto pushes footer to bottom -->
-        <div class="container">
-            <div class="row">
-                <div class="col-12">Footer header section</div>
+        <div class="container section">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center mb-3">
+                    <h3 class="display-6">Reach out to our precise team!</h3>
+                </div>
                 <!--Company Logo-->
-                <div class="col-12 col-xl-4">PMC</div>
+                <div class="col-12 col-xl-4 text-center"><img src="" alt="Company Logo"></div>
                 <!--Contact Info-->
-                <div class="col-12 col-xl-4">Contact</div>
+                <div class="col-12 col-xl-4 text-center">
+                    <address>
+                        Projects Managed with Code<br>
+                        123 Construction Lane<br>
+                        Buildtown, BT1 2CD<br>
+                        Phone: (123) 456-7890<br>
+                        Email: info@pmc.org
+                    </address>
+                </div>
                 <!--Social Media Links-->
-                <div class="col-12 col-xl-4">hi</div>
+                <div class="col-12 col-xl-4 text-center social-links">
+                    <a href="https://www.facebook.com" class="me-3"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                    <a href="https://www.x.com" class="me-3"><i class="fa-brands fa-twitter fa-2x"></i></a>
+                    <a href="https://www.linkedin.com" class="me-3"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+                    <a href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                </div>
             </div>
         </div>
     </footer>
