sofware  html completed

--- a/software.html
+++ b/software.html
@@ -41,26 +41,91 @@
         </div>
     </nav>
     <!--Header-->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-xl-6">Precision Management Software</div>
-                <div class="col-12 col-xl-6">Picture</div>
+    <header class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-12">
+                <h1>Precision Sotware</h1>
             </div>
+            <div class="col-12"><img src="" class="">image</div>
         </div>
     </header>
     <!--Main Element holding important sections-->
     <main>
         <section class="container">
             <div class="row">
-                <div class="col-12 col md-6 col-xl-4">Site Progress</div>
-                <div class="col-12 col md-6 col-xl-4">Tool Tracker</div>
-                <div class="col-12 col md-6 col-xl-4">Finance Tracker</div>
-                <div class="col-12 col md-6 col-xl-4">Material Tracker</div>
-                <div class="col-12 col md-6 col-xl-4">Planning & Control Documentation</div>
-                <div class="col-12 col md-6 col-xl-4">Hire Tracker</div>
-                <div class="col-12 col md-6 col-xl-4">Employee tickets database</div>
-                <div class="col-12 col md-6 col-xl-4">All in One</div>
+                <div class="col-12">
+                    <h3 class="mt-4 mb-4">Precision Software Base</h3>
+                    <p>Core features:</p>
+                </div>
+                <div class="col-12 col-xl-4">
+                    <h4 class="sub-heading">Site Management</h4>
+                    <ul>
+                        <li>Project Scheduling</li>
+                        <li>Task Management</li>
+                        <li>Employee Task Assignment</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-xl-4">
+                    <h4 class="sub-heading">Employee Database</h4>
+                    <ul>
+                        <li>Certification Management</li>
+                        <li>Employee Profiles</li>
+                        <li>Timesheets</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-xl-4">
+                    <h4 class="sub-heading">H&S Management</h4>
+                    <ul>
+                        <li>Toolbox talks</li>
+                        <li>RAMS</li>
+                        <li>Method Statements</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="mt-4 mb-4">Precision Sofware Pro</h3>
+                    <p>Addtional Features:</p>
+                </div>
+                <div class="col-12 col-xl-3">
+                    <h4 class="sub-heading">Material Management</h4>
+                    <ul>
+                        <li>Material Tracking</li>
+                        <li>Order Management</li>
+                        <li>Inventory Control</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-xl-3">
+                    <h4 class="sub-heading">Tools Tracker</h4>
+                    <ul>
+                        <li>Tool purchase date</li>
+                        <li>Tool allocation</li>
+                        <li>Tool repair</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-xl-3">
+                    <h4 class="sub-heading">Finance Tracker</h4>
+                    <ul>
+                        <li>Invoices</li>
+                        <li>Employee wages</li>
+                        <li>Expenses</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-xl-3">
+                    <h4 class="sub-heading">Equipment Hire</h4>
+                    <ul>
+                        <li>Equipment hire</li>
+                        <li>Equipment type</li>
+                        <li>Equipment invoices</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center mt-4 mb-4">
+                    <a class="btn btn-primary" href="register.html" role="button">Register</a>
+                </div>
             </div>
         </section>
     </main>
