register html completed

--- a/software.html
+++ b/software.html
@@ -123,6 +123,7 @@
         </section>
         <section class="container">
             <div class="row justify-content-center">
+                <div class="col-12 text-center mt-4 mb-4">To get set up with the complete your regsitration and the team will be in touch</div>
                 <div class="col-12 text-center mt-4 mb-4">
                     <a class="btn btn-primary" href="register.html" role="button">Register</a>
                 </div>
