software html updated

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </section>
         <section class="container">
-            <div class="row justify-content-center">
+            <div id="links" class="row justify-content-center">
                 <div class="col-12 text-center mt-4 mb-4">
                     <a class="btn btn-primary" href="software.html" role="button">Precsion Software</a>
                     <a class="btn btn-primary" href="register.html" role="button">Register</a>
