--- a/software.html
+++ b/software.html
@@ -55,9 +55,104 @@
             <div class="row">
                 <div class="col-12">
                     <h3 class="mt-4 mb-4">Precision Software Base</h3>
-                    <p>Core features:</p>
                 </div>
-                <div class="col-12 col-xl-4">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Site Management</h5>
+                        <li>
+                            Project Scheduling
+                            Task Management
+                            Employee Task Assignment
+                        </li>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Employee Hub</h5>
+                        <li>
+                            Certification Management
+                            Employee Profiles
+                            Timesheets
+                        </li>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">H&S Management</h5>
+                        <li>
+                            Toolbox talks
+                            RAMS
+                            Method Statements
+                        </li>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="mt-4 mb-1">Precision Software Pro</h3>
+                    <p>Includes everything in base version</p>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Material Management</h5>
+                        <ul>
+                            <li>Material Tracking</li>
+                            <li>Order Management</li>
+                            <li>Inventory Control</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Tools Tracker</h5>
+                        <ul>
+                            <li>Tool purchase date</li>
+                            <li>Tool allocation</li>
+                            <li>Tool repair</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Finance Tracker</h5>
+                        <ul>
+                            <li>Invoices</li>
+                            <li>Employee wages</li>
+                            <li>Expenses</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Equipment Hire</h5>
+                        <ul>
+                            <li>Equipment hire</li>
+                            <li>Equipment type</li>
+                            <li>Equipment invoices</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center mt-4 mb-4">To get set up with the complete your regsitration and the team
+                    will be in touch</div>
+                <div class="col-12 text-center mt-4 mb-4">
+                    <a class="btn btn-primary" href="register.html" role="button">Register</a>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- <main>
+        <section id="base "class="container">
+            <div class="row justify-content-center text-center">
+                <div class="col-12">
+                    <h3 class="mt-4 mb-4">Precision Software Base</h3>
+                </div>
+                <div class="col-12 col-md-4 col-xl-4">
                     <h4 class="sub-heading">Site Management</h4>
                     <ul>
                         <li>Project Scheduling</li>
@@ -65,7 +160,7 @@
                         <li>Employee Task Assignment</li>
                     </ul>
                 </div>
-                <div class="col-12 col-xl-4">
+                <div class="col-12 col-md-4 col-xl-4">
                     <h4 class="sub-heading">Employee Database</h4>
                     <ul>
                         <li>Certification Management</li>
@@ -73,7 +168,7 @@
                         <li>Timesheets</li>
                     </ul>
                 </div>
-                <div class="col-12 col-xl-4">
+                <div class="col-12 col-md-4 col-xl-4">
                     <h4 class="sub-heading">H&S Management</h4>
                     <ul>
                         <li>Toolbox talks</li>
@@ -82,12 +177,11 @@
                     </ul>
                 </div>
             </div>
-            <div class="row">
+            <div class="row justify-content-center text-center">
                 <div class="col-12">
-                    <h3 class="mt-4 mb-4">Precision Sofware Pro</h3>
-                    <p>Addtional Features:</p>
+                    <h3  id="pro" class="mt-4 mb-4">Precision Sofware Pro</h3>
                 </div>
-                <div class="col-12 col-xl-3">
+                <div class="col-12 col-md-3 col-xl-3">
                     <h4 class="sub-heading">Material Management</h4>
                     <ul>
                         <li>Material Tracking</li>
@@ -95,7 +189,7 @@
                         <li>Inventory Control</li>
                     </ul>
                 </div>
-                <div class="col-12 col-xl-3">
+                <div class="col-12 col-md-3 col-xl-3">
                     <h4 class="sub-heading">Tools Tracker</h4>
                     <ul>
                         <li>Tool purchase date</li>
@@ -103,7 +197,7 @@
                         <li>Tool repair</li>
                     </ul>
                 </div>
-                <div class="col-12 col-xl-3">
+                <div class="col-12 col-md-3 col-xl-3">
                     <h4 class="sub-heading">Finance Tracker</h4>
                     <ul>
                         <li>Invoices</li>
@@ -111,7 +205,7 @@
                         <li>Expenses</li>
                     </ul>
                 </div>
-                <div class="col-12 col-xl-3">
+                <div class="col-12 col-md-3 col-xl-3">
                     <h4 class="sub-heading">Equipment Hire</h4>
                     <ul>
                         <li>Equipment hire</li>
@@ -129,8 +223,9 @@
                 </div>
             </div>
         </section>
-    </main>
-    <!--Footer-->
+    </main> 
+    <!--Footer--> >
+
     <footer class="mt-auto"> <!-- mt auto pushes footer to bottom -->
         <div class="container section">
             <div class="row justify-content-center">
