--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
 
     <!--Header-->
     <header class="container">
-        <div class="row justify-content-center text-center">
+        <div class="row justify-content-center text-center mt-4 mb-3">
             <div class="col-12">
                 <h1>Precision Management for Construction</h1>
             </div>
-            <div class="col-12"><img src="assets/images/low-angle-view-skyscrapers.jpg" class="img-fluid w-100"></div>
         </div>
     </header>
 
@@ -57,31 +56,34 @@
     <main>
         <!--Section-->
         <section class="container">
-            <div class="row justify-content-center text-center">
-                <div class="col-12">
-                    <h2 class="display-6">Precision matters</h2>
-                </div>
-                <div class="col-12 col-xl-12">
-                    <p>PMC is a mobile-first SaaS platform built for construction subcontractors to simplify project
-                        management. It bringd together real-time site progress tracking, detailed materail and tool
-                        management, and health and safety compliance in one easy-to-use system. Designed for small to
-                        medium firms. PMC helps reduce wastem improves accountability, and keeps projects on time, on
-                        budget, and compliant without the complexity or cost of tradition project management software.
+            <div class="row justify-content-center text-center box g-4">
+                <div class="col-12 col-xl-6 about align-self-start m-3">
+                    <p>PMC (Precision Management for Construction) is a mobile-first platform built to streamline every aspect of subcontractor workflows. From tracking site progress to managing tools, materials, and compliance 
                     </p>
                 </div>
-                <div class="col-12 col-xl-12">
-                    <p></p>With PMC, you dont just manage projects, you manage them with code!
+                <div class="col-12 col-xl-6 about align-self-end m-3">
+                    <p>PMC brings clarity, control, and precision to your projects—helping small to mid-sized firms stay efficient, accountable, and on budget.</p>
                 </div>
             </div>
         </section>
-        <section class="container">
-            <div id="links" class="row justify-content-center">
+        <section class="container mb-4">
+            <div class="row">
+                <div class="col-12 col-md-6 justify-content-center text-center">
+                    <a class="btn btn-secondary" href="software.html" role="button">Precsion Software</a>
+                </div>
+                <div class="col-12 col-md-6 justify-content-center text-center">
+                    <a class="btn btn-secondary" href="register.html" role="button">Register</a>
+                </div>       
+            </div>           
+        </section>
+        <!--Section-->
+        <!-- <div id="links" class="row justify-content-center">
                 <div class="col-12 text-center mt-4 mb-4">
                     <a class="btn btn-primary" href="software.html" role="button">Precsion Software</a>
                     <a class="btn btn-primary" href="register.html" role="button">Register</a>
                 </div>
             </div>
-        </section>
+            -->
     </main>
     <!--Footer-->
     <footer class="mt-auto"> <!-- mt auto pushes footer to bottom -->
@@ -103,7 +105,7 @@
                     </address>
                 </div>
                 <!--Social Media Links-->
-                <div class="col-12 col-xl-4 text-center social-links">
+                <div id="media-links" class="col-12 col-xl-4 text-center social-links">
                     <a href="https://www.facebook.com" class="me-3"><i class="fa-brands fa-facebook fa-2x"></i></a>
                     <a href="https://www.x.com" class="me-3"><i class="fa-brands fa-twitter fa-2x"></i></a>
                     <a href="https://www.linkedin.com" class="me-3"><i class="fa-brands fa-linkedin fa-2x"></i></a>
