--- a/register.html
+++ b/register.html
@@ -105,7 +105,7 @@
                     </address>
                 </div>
                 <!--Social Media Links-->
-                <div class="col-12 col-xl-4 text-center social-links">
+                <div id="media-links" class="col-12 col-xl-4 text-center social-links">
                     <a href="https://www.facebook.com" class="me-3"><i class="fa-brands fa-facebook fa-2x"></i></a>
                     <a href="https://www.x.com" class="me-3"><i class="fa-brands fa-twitter fa-2x"></i></a>
                     <a href="https://www.linkedin.com" class="me-3"><i class="fa-brands fa-linkedin fa-2x"></i></a>
