--- a/software.html
+++ b/software.html
@@ -56,34 +56,43 @@
                 <div class="col-12">
                     <h3 class="mt-4 mb-4">Precision Software Base</h3>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Site Management</h5>
-                        <li>
-                            Project Scheduling
-                            Task Management
-                            Employee Task Assignment
-                        </li>
+
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Site Management</h5>
+                            <ul>
+                                <li>Project Scheduling</li>
+                                <li>Task Management</li>
+                                <li>Employee Task Assignment</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Employee Hub</h5>
-                        <li>
-                            Certification Management
-                            Employee Profiles
-                            Timesheets
-                        </li>
+
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Employee Hub</h5>
+                            <ul>
+                                <li>Certification Management</li>
+                                <li>Employee Profiles</li>
+                                <li>Timesheets</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">H&S Management</h5>
-                        <li>
-                            Toolbox talks
-                            RAMS
-                            Method Statements
-                        </li>
+
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">H&S Management</h5>
+                            <ul>
+                                <li>Toolbox Talks</li>
+                                <li>RAMS</li>
+                                <li>Method Statements</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -94,53 +103,61 @@
                     <h3 class="mt-4 mb-1">Precision Software Pro</h3>
                     <p>Includes everything in base version</p>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Material Management</h5>
-                        <ul>
-                            <li>Material Tracking</li>
-                            <li>Order Management</li>
-                            <li>Inventory Control</li>
-                        </ul>
+                <div class="col-md-3 mb-3">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Material Management</h5>
+                            <ul>
+                                <li>Material Tracking</li>
+                                <li>Order Management</li>
+                                <li>Inventory Control</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Tools Tracker</h5>
-                        <ul>
-                            <li>Tool purchase date</li>
-                            <li>Tool allocation</li>
-                            <li>Tool repair</li>
-                        </ul>
+                <div class="col-md-3 mb-3">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Tools Tracking</h5>
+                            <ul>
+                                <li>Tool purchase date</li>
+                                <li>Tool allocation</li>
+                                <li>Tool repair</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Finance Tracker</h5>
-                        <ul>
-                            <li>Invoices</li>
-                            <li>Employee wages</li>
-                            <li>Expenses</li>
-                        </ul>
+                <div class="col-md-3 mb-3">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Finance Hub</h5>
+                            <ul>
+                                <li>Invoices</li>
+                                <li>Employee wages</li>
+                                <li>Expenses</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Equipment Hire</h5>
-                        <ul>
-                            <li>Equipment hire</li>
-                            <li>Equipment type</li>
-                            <li>Equipment invoices</li>
-                        </ul>
+                <div class="col-md-3 mb-3">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Equipment Hire</h5>
+                            <ul>
+                                <li>Equipment hire</li>
+                                <li>Equipment type</li>
+                                <li>Equipment invoices</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="container">
             <div class="row justify-content-center">
-                <div class="col-12 text-center mt-4 mb-4">To get set up with the complete your regsitration and the team
+                <div class="col-12 text-center mt-4">To get set up with the complete your regsitration and the team
                     will be in touch</div>
-                <div class="col-12 text-center mt-4 mb-4">
+                <div class="col-12 text-center mb-4">
                     <a class="btn btn-primary" href="register.html" role="button">Register</a>
                 </div>
             </div>
@@ -245,7 +262,7 @@
                     </address>
                 </div>
                 <!--Social Media Links-->
-                <div class="col-12 col-xl-4 text-center social-links">
+                <div id="media-links" class="col-12 col-xl-4 text-center social-links">
                     <a href="https://www.facebook.com" class="me-3"><i class="fa-brands fa-facebook fa-2x"></i></a>
                     <a href="https://www.x.com" class="me-3"><i class="fa-brands fa-twitter fa-2x"></i></a>
                     <a href="https://www.linkedin.com" class="me-3"><i class="fa-brands fa-linkedin fa-2x"></i></a>
