hover effect added to buttons on index

--- a/software.html
+++ b/software.html
@@ -59,7 +59,7 @@
 
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
-                        <div class="card-body text-center">
+                        <div class="card-body">
                             <h5 class="card-title">Site Management</h5>
                             <ul>
                                 <li>Project Scheduling</li>
