--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                 </div>
             </div>
         </section>
-        <section class="container mb-4">
+        <section class="container mt-4 mb-4">
             <div class="row">
-                <div class="col-12 col-md-6 justify-content-center text-center">
-                    <a class="btn btn-secondary" href="software.html" role="button">Precsion Software</a>
+                <div class="col-12 col-md-6 justify-content-center text-center cta-button">
+                    <a class="btn btn-secondary cta-effect" href="software.html" role="button">Precsion Software</a>
                 </div>
-                <div class="col-12 col-md-6 justify-content-center text-center">
+                <div class="col-12 col-md-6 justify-content-center text-center cta-button">
                     <a class="btn btn-secondary" href="register.html" role="button">Register</a>
                 </div>       
             </div>           
