index and software css updated

--- a/software.html
+++ b/software.html
@@ -46,19 +46,17 @@
             <div class="col-12">
                 <h1>Precision Sotware</h1>
             </div>
-            <div class="col-12"><img src="" class="">image</div>
         </div>
     </header>
     <!--Main Element holding important sections-->
     <main>
         <section class="container">
-            <div class="row">
+            <div class="row base">
                 <div class="col-12">
                     <h3 class="mt-4 mb-4">Precision Software Base</h3>
                 </div>
-
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
+                <div class="col-md-4 mb-3 mt-3">
+                    <div class="card h-100 base-card">
                         <div class="card-body">
                             <h5 class="card-title">Site Management</h5>
                             <ul>
@@ -70,8 +68,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
+                <div class="col-md-4 mb-3 mt-3">
+                    <div class="card h-100 base-card">
                         <div class="card-body">
                             <h5 class="card-title">Employee Hub</h5>
                             <ul>
@@ -83,8 +81,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
+                <div class="col-md-4 mb-3 mt-3">
+                    <div class="card h-100 base-card">
                         <div class="card-body">
                             <h5 class="card-title">H&S Management</h5>
                             <ul>
@@ -98,67 +96,67 @@
             </div>
         </section>
         <section class="container">
-            <div class="row">
+            <div class="row pro">
                 <div class="col-12">
                     <h3 class="mt-4 mb-1">Precision Software Pro</h3>
                     <p>Includes everything in base version</p>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Material Management</h5>
-                            <ul>
-                                <li>Material Tracking</li>
-                                <li>Order Management</li>
-                                <li>Inventory Control</li>
-                            </ul>
+                </div>     
+                    <div class="col-md-3 mb-3 mt-3">
+                        <div class="card h-100 base-card">
+                            <div class="card-body">
+                                <h5 class="card-title">Material Management</h5>
+                                <ul>
+                                    <li>Material Tracking</li>
+                                    <li>Order Management</li>
+                                    <li>Inventory Control</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Tools Tracking</h5>
-                            <ul>
-                                <li>Tool purchase date</li>
-                                <li>Tool allocation</li>
-                                <li>Tool repair</li>
-                            </ul>
+                    <div class="col-md-3 mb-3 mt-3">
+                        <div class="card h-100 base-card">
+                            <div class="card-body">
+                                <h5 class="card-title">Tools Tracking</h5>
+                                <ul>
+                                    <li>Tool purchase date</li>
+                                    <li>Tool allocation</li>
+                                    <li>Tool repair</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Finance Hub</h5>
-                            <ul>
-                                <li>Invoices</li>
-                                <li>Employee wages</li>
-                                <li>Expenses</li>
-                            </ul>
+                    <div class="col-md-3 mb-3 mt-3">
+                        <div class="card h-100 base-card">
+                            <div class="card-body">
+                                <h5 class="card-title">Finance Hub</h5>
+                                <ul>
+                                    <li>Invoices</li>
+                                    <li>Employee wages</li>
+                                    <li>Expenses</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Equipment Hire</h5>
-                            <ul>
-                                <li>Equipment hire</li>
-                                <li>Equipment type</li>
-                                <li>Equipment invoices</li>
-                            </ul>
+                    <div class="col-md-3 mb-3 mt-3">
+                        <div class="card h-100 base-card">
+                            <div class="card-body">
+                                <h5 class="card-title">Equipment Hire</h5>
+                                <ul>
+                                    <li>Equipment hire</li>
+                                    <li>Equipment type</li>
+                                    <li>Equipment invoices</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
             </div>
         </section>
         <section class="container">
             <div class="row justify-content-center">
-                <div class="col-12 text-center mt-4">To get set up with the complete your regsitration and the team
+                <div id="register" class="col-12 text-center mt-4">To get set up with the complete your regsitration and the team
                     will be in touch</div>
-                <div class="col-12 text-center mb-4">
-                    <a class="btn btn-primary" href="register.html" role="button">Register</a>
+                <div class="col-12 text-center mb-4 mt-4 cta-button">
+                    <a class="btn btn-register" href="register.html" role="button">Register</a>
                 </div>
             </div>
         </section>
