register page styled

--- a/register.html
+++ b/register.html
@@ -41,23 +41,15 @@
         </div>
     </nav>
 
-    <!--Header-->
-    <header class="container">
-        <div class="row">
-            <div class="col-12">Register your interest!</div>
-            <div class="col-12">Picture</div>
-        </div>
-    </header>
-
     <!--Main Element holding important sections-->
     <main>
         <!--Section-->
-        <section id="booking-form" class="container section">
-        <div class="row justify-content-center text-center">
+        <section class="container section glass mt-5 mb-5">
+        <div class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <h2>Request a call back</h2>
                 <form action="completion.html" method="GET">
-                    <div class="row">
+                    <div class="row booking-form g-3">
                         <div class="col-12 mb-3">
                             <label for="name" class="form-label">Name:</label>
                             <input class="form-control" id="name" name="name" type="text" required>
@@ -79,7 +71,7 @@
                             </select>
                         </div>
                     </div> 
-                    <button type="submit" class="btn btn-outline-primary custom-outline-button">Submit</button>  
+                    <button type="submit" class="btn btn-register">Submit</button>  
                 </form>
             </div>
         </div>
