--- a/software.html
+++ b/software.html
@@ -17,7 +17,7 @@
 <body class="d-flex flex-column min-vh-100">
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
-        <div class="container">
+        <div class="container"> <!-- Changed to container for better alignment -->
             <a class="navbar-brand" href="index.html">
                 <i class="fa-solid fa-person-digging"></i>
             </a>
@@ -26,7 +26,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto"> <!-- ms auto pushes nav to right -->
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
@@ -100,60 +100,61 @@
                 <div class="col-12">
                     <h3 class="mt-4 mb-1">Precision Software Pro</h3>
                     <p>Includes everything in base version</p>
-                </div>     
-                    <div class="col-md-3 mb-3 mt-3">
-                        <div class="card h-100 base-card">
-                            <div class="card-body">
-                                <h5 class="card-title">Material Management</h5>
-                                <ul>
-                                    <li>Material Tracking</li>
-                                    <li>Order Management</li>
-                                    <li>Inventory Control</li>
-                                </ul>
-                            </div>
+                </div>
+                <div class="col-md-3 mb-3 mt-3">
+                    <div class="card h-100 base-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Material Management</h5>
+                            <ul>
+                                <li>Material Tracking</li>
+                                <li>Order Management</li>
+                                <li>Inventory Control</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col-md-3 mb-3 mt-3">
-                        <div class="card h-100 base-card">
-                            <div class="card-body">
-                                <h5 class="card-title">Tools Tracking</h5>
-                                <ul>
-                                    <li>Tool purchase date</li>
-                                    <li>Tool allocation</li>
-                                    <li>Tool repair</li>
-                                </ul>
-                            </div>
+                </div>
+                <div class="col-md-3 mb-3 mt-3">
+                    <div class="card h-100 base-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Tools Tracking</h5>
+                            <ul>
+                                <li>Tool purchase date</li>
+                                <li>Tool allocation</li>
+                                <li>Tool repair</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col-md-3 mb-3 mt-3">
-                        <div class="card h-100 base-card">
-                            <div class="card-body">
-                                <h5 class="card-title">Finance Hub</h5>
-                                <ul>
-                                    <li>Invoices</li>
-                                    <li>Employee wages</li>
-                                    <li>Expenses</li>
-                                </ul>
-                            </div>
+                </div>
+                <div class="col-md-3 mb-3 mt-3">
+                    <div class="card h-100 base-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Finance Hub</h5>
+                            <ul>
+                                <li>Invoices</li>
+                                <li>Employee wages</li>
+                                <li>Expenses</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col-md-3 mb-3 mt-3">
-                        <div class="card h-100 base-card">
-                            <div class="card-body">
-                                <h5 class="card-title">Equipment Hire</h5>
-                                <ul>
-                                    <li>Equipment hire</li>
-                                    <li>Equipment type</li>
-                                    <li>Equipment invoices</li>
-                                </ul>
-                            </div>
+                </div>
+                <div class="col-md-3 mb-3 mt-3">
+                    <div class="card h-100 base-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Equipment Hire</h5>
+                            <ul>
+                                <li>Equipment hire</li>
+                                <li>Equipment type</li>
+                                <li>Equipment invoices</li>
+                            </ul>
                         </div>
                     </div>
+                </div>
             </div>
         </section>
         <section class="container">
             <div class="row justify-content-center">
-                <div id="register" class="col-12 text-center mt-4">To get set up with the complete your regsitration and the team
+                <div id="register" class="col-12 text-center mt-4">To get set up with the complete your regsitration and
+                    the team
                     will be in touch</div>
                 <div class="col-12 text-center mb-4 mt-4 cta-button">
                     <a class="btn btn-register" href="register.html" role="button">Register</a>
@@ -269,12 +270,12 @@
             </div>
         </div>
     </footer>
-    <!-- Bootstrap JS Bundle -->
+   
+</body>
+ <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"> </script>
     <!-- Font awesome kit -->
     <script src="https://kit.fontawesome.com/6b3b37dcca.js" crossorigin="anonymous"></script>
-</body>
-
 </html>
