fixed navbar, fixed heading and content on software

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="d-flex flex-column min-vh-100"> <!-- Making the body take full height -->
     <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container"> <!-- Changed to container for better alignment -->
             <a class="navbar-brand" href="index.html">
                 <i class="fa-solid fa-person-digging"></i>
@@ -58,7 +58,7 @@
         <section class="container">
             <div class="row justify-content-center text-center box g-4">
                 <div class="col-12 col-xl-6 about align-self-start m-3">
-                    <p>PMC (Precision Management for Construction) is a mobile-first platform built to streamline every aspect of subcontractor workflows. From tracking site progress to managing tools, materials, and compliance 
+                    <p>PMC (Precision Management for Construction) is a platform built to streamline every aspect of subcontractor workflows. From tracking site progress to managing tools, materials, and compliance 
                     </p>
                 </div>
                 <div class="col-12 col-xl-6 about align-self-end m-3">
