--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
 
 <body class="d-flex flex-column min-vh-100"> <!-- Making the body take full height -->
     <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <i class="fa-solid fa-person-digging"></i>
