--- a/software.html
+++ b/software.html
@@ -16,7 +16,7 @@
 
 <body class="d-flex flex-column min-vh-100">
     <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container"> <!-- Changed to container for better alignment -->
             <a class="navbar-brand" href="index.html">
                 <i class="fa-solid fa-person-digging"></i>
@@ -43,8 +43,8 @@
     <!--Header-->
     <header class="container">
         <div class="row justify-content-center text-center">
-            <div class="col-12">
-                <h1>Precision Sotware</h1>
+            <div class="col-12 mt-4 mb-3">
+                <h1 class="ps-header">Precision Sotware</h1>
             </div>
         </div>
     </header>
@@ -53,7 +53,7 @@
         <section class="container">
             <div class="row base">
                 <div class="col-12">
-                    <h3 class="mt-4 mb-4">Precision Software Base</h3>
+                    <h3 class="mt-4 mb-4">Essientals</h3>
                 </div>
                 <div class="col-md-4 mb-3 mt-3">
                     <div class="card h-100 base-card">
@@ -98,8 +98,8 @@
         <section class="container">
             <div class="row pro">
                 <div class="col-12">
-                    <h3 class="mt-4 mb-1">Precision Software Pro</h3>
-                    <p>Includes everything in base version</p>
+                    <h3 class="mt-4 mb-1">Premium</h3>
+                    <p>Includes everything in essentials version</p>
                 </div>
                 <div class="col-md-3 mb-3 mt-3">
                     <div class="card h-100 base-card">
