--- a/register.html
+++ b/register.html
@@ -47,7 +47,7 @@
         <section class="container section glass mt-5 mb-5">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
-                <h2>Request a call back</h2>
+                <h2>Submit your details and we'll be in touch shortly.</h2>
                 <form action="completion.html" method="GET">
                     <div class="row booking-form g-3">
                         <div class="col-12 mb-3">
@@ -66,8 +66,8 @@
                             <label for="event-type" class="form-label">Software</label>
                             <select id="event-type" class="form-select" name="event-type" required>
                                 <option value="" selected></option>
-                                <option value="regular-play">Precision software Base</option>
-                                <option value="dnd">Precision software Pro</option>
+                                <option value="regular-play">Essentials</option>
+                                <option value="dnd">Premium</option>
                             </select>
                         </div>
                     </div> 
