--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header class="container">
         <div class="row justify-content-center text-center mt-4 mb-3">
             <div class="col-12">
-                <h1>Precision Management for Construction</h1>
+                <h1 class="hp-header">Precision Management for Construction</h1>
             </div>
         </div>
     </header>
