--- a/completion.html
+++ b/completion.html
@@ -60,7 +60,9 @@
                     <h3 class="display-6">Reach out to our precise team!</h3>
                 </div>
                 <!--Company Logo-->
-                <div class="col-12 col-xl-4 text-center"><img src="" alt="Company Logo"></div>
+                <div class="col-12 col-xl-4 text-center"><img src="/assets/images/company-logo.png" alt="Company Logo"
+                        class="img-fluid" style="max-width: 100%; max-height: 100px; height: auto;">
+                </div>
                 <!--Contact Info-->
                 <div class="col-12 col-xl-4 text-center">
                     <address>
@@ -84,8 +86,8 @@
 </body>
 <!-- Bootstrap JS Bundle -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"> </script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"> </script>
 <!-- Font awesome kit -->
 <script src="https://kit.fontawesome.com/6b3b37dcca.js" crossorigin="anonymous"></script>
 
