--- a/index.html
+++ b/index.html
@@ -58,11 +58,14 @@
         <section class="container">
             <div class="row justify-content-center text-center box g-4">
                 <div class="col-12 col-xl-6 about align-self-start m-3">
-                    <p>PMC (Precision Management for Construction) is a platform built to streamline every aspect of subcontractor workflows. From tracking site progress to managing tools, materials, and compliance 
+                    <p>PMC (Precision Management for Construction) is a platform built to streamline every aspect of
+                        subcontractor workflows. From tracking site progress to managing tools, materials, and
+                        compliance
                     </p>
                 </div>
                 <div class="col-12 col-xl-6 about align-self-end m-3">
-                    <p>PMC brings clarity, control, and precision to your projects—helping small to mid-sized firms stay efficient, accountable, and on budget.</p>
+                    <p>PMC brings clarity, control, and precision to your projects—helping small to mid-sized firms stay
+                        efficient, accountable, and on budget.</p>
                 </div>
             </div>
         </section>
@@ -73,8 +76,8 @@
                 </div>
                 <div class="col-12 col-md-6 justify-content-center text-center cta-button">
                     <a class="btn btn-register" href="register.html" role="button">Register</a>
-                </div>       
-            </div>           
+                </div>
+            </div>
         </section>
         <!--Section-->
         <!-- <div id="links" class="row justify-content-center">
@@ -93,7 +96,9 @@
                     <h3 class="display-6">Reach out to our precise team!</h3>
                 </div>
                 <!--Company Logo-->
-                <div class="col-12 col-xl-4 text-center"><img src="" alt="Company Logo"></div>
+                <div class="col-12 col-xl-4 text-center"><img src="/assets/images/company-logo.png" alt="Company Logo"
+                        class="img-fluid" style="max-width: 100%; max-height: 100px; height: auto;">
+                </div>
                 <!--Contact Info-->
                 <div class="col-12 col-xl-4 text-center">
                     <address>
