--- a/register.html
+++ b/register.html
@@ -45,37 +45,37 @@
     <main>
         <!--Section-->
         <section class="container section glass mt-5 mb-5">
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-8">
-                <h2>Submit your details and we'll be in touch shortly.</h2>
-                <form action="completion.html" method="GET">
-                    <div class="row booking-form g-3">
-                        <div class="col-12 mb-3">
-                            <label for="name" class="form-label">Name:</label>
-                            <input class="form-control" id="name" name="name" type="text" required>
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8">
+                    <h2>Submit your details and we'll be in touch shortly.</h2>
+                    <form action="completion.html" method="GET">
+                        <div class="row booking-form g-3">
+                            <div class="col-12 mb-3">
+                                <label for="name" class="form-label">Name:</label>
+                                <input class="form-control" id="name" name="name" type="text" required>
+                            </div>
+                            <div class="col-12 mb-3">
+                                <label for="email" class="form-label">Email:</label>
+                                <input class="form-control" id="email" name="email" type="email" required>
+                            </div>
+                            <div class="col-12 mb-3">
+                                <label for="phone" class="form-label">Phone number:</label>
+                                <input class="form-control" id="phone" name="phone" type="number" required>
+                            </div>
+                            <div class="col-12 mb-3">
+                                <label for="event-type" class="form-label">Software</label>
+                                <select id="event-type" class="form-select" name="event-type" required>
+                                    <option value="" selected></option>
+                                    <option value="regular-play">Essentials</option>
+                                    <option value="dnd">Premium</option>
+                                </select>
+                            </div>
                         </div>
-                        <div class="col-12 mb-3">
-                            <label for="email" class="form-label">Email:</label>
-                            <input class="form-control" id="email" name="email" type="email" required>
-                        </div>
-                        <div class="col-12 mb-3">
-                            <label for="phone" class="form-label">Phone number:</label>
-                            <input class="form-control" id="phone" name="phone" type="number" required>
-                        </div>
-                        <div class="col-12 mb-3">
-                            <label for="event-type" class="form-label">Software</label>
-                            <select id="event-type" class="form-select" name="event-type" required>
-                                <option value="" selected></option>
-                                <option value="regular-play">Essentials</option>
-                                <option value="dnd">Premium</option>
-                            </select>
-                        </div>
-                    </div> 
-                    <button type="submit" class="btn btn-register">Submit</button>  
-                </form>
+                        <button type="submit" class="btn btn-register">Submit</button>
+                    </form>
+                </div>
             </div>
-        </div>
-        </section> 
+        </section>
     </main>
     <!--Footer-->
     <footer class="mt-auto"> <!-- mt auto pushes footer to bottom -->
@@ -85,7 +85,9 @@
                     <h3 class="display-6">Reach out to our precise team!</h3>
                 </div>
                 <!--Company Logo-->
-                <div class="col-12 col-xl-4 text-center"><img src="" alt="Company Logo"></div>
+                <div class="col-12 col-xl-4 text-center"><img src="/assets/images/company-logo.png" alt="Company Logo"
+                        class="img-fluid" style="max-width: 100%; max-height: 100px; height: auto;">
+                </div>
                 <!--Contact Info-->
                 <div class="col-12 col-xl-4 text-center">
                     <address>
@@ -109,8 +111,8 @@
 </body>
 <!-- Bootstrap JS Bundle -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"> </script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"> </script>
 <!-- Font awesome kit -->
 <script src="https://kit.fontawesome.com/6b3b37dcca.js" crossorigin="anonymous"></script>
 
