--- a/completion.html
+++ b/completion.html
@@ -75,10 +75,13 @@
                 </div>
                 <!--Social Media Links-->
                 <div id="media-links" class="col-12 col-xl-4 text-center social-links">
-                    <a href="https://www.facebook.com" class="me-3"><i class="fa-brands fa-facebook fa-2x"></i></a>
-                    <a href="https://www.x.com" class="me-3"><i class="fa-brands fa-twitter fa-2x"></i></a>
-                    <a href="https://www.linkedin.com" class="me-3"><i class="fa-brands fa-linkedin fa-2x"></i></a>
-                    <a href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3"><i
+                            class="fa-brands fa-facebook fa-2x"></i></a>
+                    <a href="https://www.x.com" target="_blank" rel="noopener" class="me-3"><i
+                            class="fa-brands fa-twitter fa-2x"></i></a>
+                    <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3"><i
+                            class="fa-brands fa-linkedin fa-2x"></i></a>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fa-brands fa-instagram fa-2x"></i></a>
                 </div>
             </div>
         </div>
