--- a/completion.html
+++ b/completion.html
@@ -45,10 +45,10 @@
 
     <main id="success" class="container section text-center">
         <div class="row justify-content-center">
-            <div class="col-12 col-md-8 mt-10">
+            <div class="col-12 col-md-8 mt-10 cta-button">
                 <h1 class="display-3">Thank you!</h1>
                 <p class="lead">Your form has been submitted successfully!</p>
-                <a href="index.html" class="btn btn-primary mb-5">Return to the home page</a>
+                <a href="index.html" class="btn btn-register mb-5 ">Return to the home page</a>
             </div>
         </div>
     </main>
