--- a/software.html
+++ b/software.html
@@ -44,7 +44,7 @@
     <header class="container">
         <div class="row justify-content-center text-center">
             <div class="col-12 mt-4 mb-3">
-                <h1 class="ps-header">Precision Sotware</h1>
+                <h1 class="ps-header">Precision Software</h1>
             </div>
         </div>
     </header>
@@ -53,7 +53,7 @@
         <section class="container">
             <div class="row base">
                 <div class="col-12">
-                    <h3 class="mt-4 mb-4">Essientals</h3>
+                    <h3 class="mt-4 mb-4">Essentials</h3>
                 </div>
                 <div class="col-md-4 mb-3 mt-3">
                     <div class="card h-100 base-card">
