--- a/index.html
+++ b/index.html
@@ -79,15 +79,8 @@
                 </div>
             </div>
         </section>
-        <!--Section-->
-        <!-- <div id="links" class="row justify-content-center">
-                <div class="col-12 text-center mt-4 mb-4">
-                    <a class="btn btn-primary" href="software.html" role="button">Precsion Software</a>
-                    <a class="btn btn-primary" href="register.html" role="button">Register</a>
-                </div>
-            </div>
-            -->
     </main>
+
     <!--Footer-->
     <footer class="mt-auto"> <!-- mt auto pushes footer to bottom -->
         <div class="container section">
@@ -109,6 +102,7 @@
                         Email: info@pmc.org
                     </address>
                 </div>
+
                 <!--Social Media Links-->
                 <div id="media-links" class="col-12 col-xl-4 text-center social-links">
                     <a href="https://www.facebook.com" target="_blank" rel="noopener" class="me-3"><i
@@ -117,19 +111,18 @@
                             class="fa-brands fa-twitter fa-2x"></i></a>
                     <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="me-3"><i
                             class="fa-brands fa-linkedin fa-2x"></i></a>
-                    <a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener"><i
+                            class="fa-brands fa-instagram fa-2x"></i></a>
                 </div>
             </div>
         </div>
     </footer>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <!-- Font awesome kit -->
+    <script src="https://kit.fontawesome.com/6b3b37dcca.js" crossorigin="anonymous"></script>
 </body>
-
-
-<!-- Bootstrap JS Bundle -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"> </script>
-<!-- Font awesome kit -->
-<script src="https://kit.fontawesome.com/6b3b37dcca.js" crossorigin="anonymous"></script>
 
 </html>
